--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "dependencies": {
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.2",
+    "@prisma/client": "^5.4.2",
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
-    "fastify": "^4.24.3"
+    "fastify": "^4.24.3",
+    "moment": "^2.29.4"
   }
 }
