--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "zod": "^3.22.4"
   }
 }
