--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.5",
     "@types/node": "^20.8.7",
     "prisma": "^5.4.2",
     "tsx": "^3.14.0",
@@ -28,9 +29,11 @@
     "@fastify/jwt": "^7.2.2",
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "moment": "^2.29.4",
+    "node-xlsx": "^0.23.0",
     "zod": "^3.22.4"
   }
 }
