--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fastify": "^4.24.3",
     "moment": "^2.29.4",
     "node-xlsx": "^0.23.0",
+    "tsup": "^7.2.0",
     "zod": "^3.22.4"
   }
 }
