--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.5",
     "@types/node": "^20.8.7",
+    "@types/request": "^2.48.12",
     "prisma": "^5.4.2",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
@@ -34,6 +35,7 @@
     "fastify": "^4.24.3",
     "moment": "^2.29.4",
     "node-xlsx": "^0.23.0",
+    "request": "^2.88.2",
     "tsup": "^7.2.0",
     "zod": "^3.22.4"
   }
