--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "start": "prisma migrate deploy && node build/server.js",
+    "start": "node build/server.js",
     "install": "",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
