--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,11 +5,10 @@ name: Node.js CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: self-hosted
 
     strategy:
@@ -17,13 +16,20 @@ jobs:
         node-version: [18.x]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: rm -rf node_modules
-    - run: yarn
-    - run: yarn build
-    - run: pm2 restart api
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: rm -rf node_modules
+      - run: yarn
+      - run: yarn prisma migrate deploy
+      - run: yarn build
+      - run: |
+          touch .env
+          echo "${{secrets.PROD_ENV_FILE}}" > .env
+      - run: pm2 stop server
+      - run: pm2 delete server
+      - run: pm2 start /build/server.js --name server
+      - run: pm2 save
