--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,5 +31,5 @@ jobs:
       - run: yarn build
       - run: pm2 stop all
       - run: pm2 delete all
-      - run: pm2 start /build/server.js --name server
+      - run: pm2 start build/server.js --name server
       - run: pm2 save
