add many routes
Foram adicionadas as rotas de recuperação de senha, alteração de senha, além da correção do webhook do Tiktok comments, que estava com problema para coletar os dados corretos.

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.2",
     "@prisma/client": "^5.4.2",
+    "@types/nodemailer": "^6.4.14",
     "axios": "^1.5.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "moment": "^2.29.4",
     "node-xlsx": "^0.23.0",
+    "nodemailer": "^6.9.8",
     "openai": "^4.24.1",
     "request": "^2.88.2",
     "tsup": "^7.2.0",
