add legal data necessary routes
Foram adicionadas todas as rotas relacionadas a parte de informações legais do projeto, sendo elas, webhook e rota de busca de CPFs para scrape de dados, além da modelagem do banco de dados necessária para essa criação

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
 	"cSpell.words": [
 		"Altimari",
 		"Calumbia",
+		"descricao",
 		"Edmilson",
+		"estao",
 		"Euripede",
 		"Euripedes",
 		"Eymaiel",
@@ -11,8 +13,14 @@
 		"Hellmeister",
 		"Herberthe",
 		"Hoffmann",
+		"igtv",
+		"justica",
 		"Kassab",
+		"movimentacao",
+		"movimentacoes",
 		"openai",
-		"Suêd"
+		"orgao",
+		"Suêd",
+		"verificacao"
 	]
 }
