--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,32 @@
 {
-	"cSpell.words": [
-		"Altimari",
-		"Axioon",
-		"Calumbia",
-		"descricao",
-		"Edmilson",
-		"estao",
-		"Euripede",
-		"Euripedes",
-		"Eymaiel",
-		"Gleisi",
-		"Haidar",
-		"Hellmeister",
-		"Herberthe",
-		"Hoffmann",
-		"igtv",
-		"justica",
-		"Kassab",
-		"movimentacao",
-		"movimentacoes",
-		"openai",
-		"orgao",
-		"Suêd",
-		"tiktok",
-		"verificacao",
-		"youtube",
-		"Youtube",
-		"zipcode"
-	]
+  "cSpell.words": [
+    "Altimari",
+    "Axioon",
+    "Calumbia",
+    "descricao",
+    "digg",
+    "Edmilson",
+    "estao",
+    "Euripede",
+    "Euripedes",
+    "Eymaiel",
+    "Gleisi",
+    "Haidar",
+    "Hellmeister",
+    "Herberthe",
+    "Hoffmann",
+    "igtv",
+    "justica",
+    "Kassab",
+    "movimentacao",
+    "movimentacoes",
+    "openai",
+    "orgao",
+    "Suêd",
+    "tiktok",
+    "verificacao",
+    "youtube",
+    "Youtube",
+    "zipcode"
+  ]
 }
